[Java] * added Unsafe Queue * added interesting behaviour with head/tail incrementation in array queues