@@ -6,6 +6,7 @@ import org.openjdk.jmh.annotations.Setup;
 
 import ua.ds.QueueBenchmark;
 import ua.ds.array.primitive.ConditionalNonResizableArrayQueuePrimitive;
+import ua.ds.array.primitive.ConditionalNonResizableArrayQueuePrimitiveWithIncrement;
 import ua.ds.linked.primitive.LinkedQueuePrimitive;
 
 public class LinkedVsArray extends QueueBenchmark {
@@ -14,6 +15,7 @@ public class LinkedVsArray extends QueueBenchmark {
   private LinkedQueuePrimitive linkedCms;
   private LinkedQueuePrimitive linkedParallel;
   private ConditionalNonResizableArrayQueuePrimitive array;
+  private ConditionalNonResizableArrayQueuePrimitiveWithIncrement arrayWithIncrement;
 
   @Setup
   public void setUp() {
@@ -21,6 +23,7 @@ public class LinkedVsArray extends QueueBenchmark {
     linkedCms = new LinkedQueuePrimitive();
     linkedParallel = new LinkedQueuePrimitive();
     array = new ConditionalNonResizableArrayQueuePrimitive(size);
+    arrayWithIncrement = new ConditionalNonResizableArrayQueuePrimitiveWithIncrement(size);
   }
 
   @Benchmark
@@ -42,7 +45,36 @@ public class LinkedVsArray extends QueueBenchmark {
   }
 
   @Benchmark
+  @Fork(value = 3, jvmArgs = "-XX:+UseConcMarkSweepGC")
   public int array() {
     return dequeMany(enqueueMany(array));
+  }
+
+  @Benchmark
+  @Fork(value = 3, jvmArgs = "-XX:+UseParallelGC")
+  public int array_inline() {
+    for (int item : data) {
+      array.enqueue(item);
+    }
+    int sum = 0;
+    int item;
+    while ((item = array.deque()) != -1) {
+      sum += item;
+    }
+    return sum;
+  }
+
+  @Benchmark
+  @Fork(value = 3, jvmArgs = "-XX:+UseParallelGC")
+  public int array_with_increment() {
+    for (int item : data) {
+      arrayWithIncrement.enqueue(item);
+    }
+    int sum = 0;
+    int item;
+    while ((item = arrayWithIncrement.deque()) != -1) {
+      sum += item;
+    }
+    return sum;
   }
 }
